<resources>
    <string name="app_name">Inżynierka2</string>
    <string name="haslo">Hasło</string>
    <string name="zaloguj">Zaloguj się</string>
    <string name="imie">Imie</string>
    <string name="dalej">Dalej</string>
    <string name="zapomniane">Zapomniałeś hasło..</string>
    <string name="textview">TextView</string>
    <string name="strona_2">strona 2</string>
    <string name="zarejestruj_si">Zarejestruj się</string>
    <string name="albo">Albo</string>
    <string name="podaj_imi_i_has_o">Podaj imię i hasło</string>
    <string name="zarejestruj">Zarejestruj</string>
    <string name="back">Back</string>
    <string name="podaj_email">Podaj email</string>
    <string name="resetuj_has_o">Resetuj hasło</string>
    <string name="e_mail">e-mail</string>
    <string name="e_mail1">e-mail</string>
    <string name="podaj_e_mail_i_has_o">Podaj e-mail i hasło</string>
    <string name="przes_ane_case_y">Przesłane case\'y</string>
    <string name="apka_in_yniera">APKA INŻYNIERA</string>
    <string name="nowy_case">Nowy case</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="zaloguj12">Zaloguj</string>
    <string name="zapami_taj_mnie">Zapamiętaj mnie</string>
    <string name="dane_klienta">Dane Klienta</string>
    <string name="dane_samochodu">Dane Samochodu</string>
    <string name="podpisz_dokumenty">Podpisz dokumenty</string>
    <string name="zako_cz">Zakończ</string>
    <string name="zdj_cia">Zdjęcia</string>
    <string name="utw_rz_case">Utwórz case</string>
    <string name="imi_klienta">Imię klienta</string>
    <string name="nazwisko_klienta">Nazwisko klienta</string>
    <string name="telefon_klienta">Telefon klienta</string>
    <string name="pesel">Pesel</string>
    <string name="przejd_dalej">Przejdź dalej</string>
    <string name="dane_ubezpieczalni">Dane ubezpieczalni</string>
    <string name="marka_samochodu">Marka samochodu</string>
    <string name="model_samochodu">Model samochodu</string>
    <string name="tablice_rejestracyjne">Tablice rejestracyjne</string>
    <string name="data_pierwszej_rejestracji">Data pierwszej rejestracji</string>
    <string name="ubezpieczalnia_poszkodowanego">Ubezpieczalnia poszkodowanego</string>
    <string name="ubezpieczalnia_sprawcy">Ubezpieczalnia sprawcy</string>
    <string name="tablice_rejestracyjne_sprawcy">Tablice rejestracyjne sprawcy</string>
    <string name="marka_samochodu_sprawcy">Marka samochodu sprawcy</string>
    <string name="wy_lij">Wyślij</string>
    <string name="ostatni_case">Ostatni case</string>
    <string name="panel_zg_oszeniowy">Panel zgłoszeniowy</string>
</resources>