<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rejestracja"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StronaGlowna">

    <TextView
        android:id="@+id/nazwa_apki"
        android:layout_width="413dp"
        android:layout_height="56dp"
        android:background="#2196F3"
        android:text="@string/panel_zg_oszeniowy"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <Button
        android:id="@+id/wyloguj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wyloguj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <!-- Przycisk "Nowy case" -->

    <!-- Przycisk "Przesłane case’y" (lista) -->

    <!-- NOWY przycisk "Ostatni case" -->

    <Button
        android:id="@+id/nowy_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nowy_case"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/ostatni_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ostatni_case"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />

    <Button
        android:id="@+id/stary_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przes_ane_case_y"
        app:layout_constraintBottom_toTopOf="@+id/ostatni_case"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nowy_case"
        app:layout_constraintVertical_bias="0.431" />

</androidx.constraintlayout.widget.ConstraintLayout>
